--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .gradient-background {
-  background: linear-gradient(300deg, #00bfff, #ff4c68, #ef8172);
+  background: linear-gradient(300deg, #a63fe7, #4b84da, #ccb8a9);
   background-size: 180% 180%;
   animation: gradient-animation 18s ease infinite;
 }
@@ -28,7 +28,5 @@
 }
 
 #footer{
-  margin: 0px;
-  padding: 0px;
+  display: block;
 }
-
